<resources>
	<string name="app_name">Healthy Way</string>
	<string name="_1_4_prof_group">Workers mainly intellectual labour (very light physical activity)</string>
	<string name="_1_6_prof_group">Workers employed light labour (light physical activity)</string>
	<string name="_1_9_prof_group">Workers moderate severity labour (average physical activity)</string>
	<string name="_2_3_prof_group">Workers in heavy physical labour (high physical activity)</string>
	<string name="_2_5_prof_group">Workers especially hard physical labour (very high physical activity)</string>
	<string name="_1_4_prestaviteli">Scientists\nHumanitarian specialities students\nIT managers\nSoftware developers\nAny inspectors\nTeachers\nLecturers\nManagers\nEmployees who working with control panels etc.</string>
	<string name="_1_6_prestaviteli">Drivers\nWorkers on any conveyors\nWeigher\nPackers\nSeamstresses\nElectronic industry workers\nAgronomists\nNurses/orderlies\nStaff communication\nThe service sector\nSales of manufactured goods etc.</string>
	<string name="_1_9_prestaviteli">Fitters\nInstallers\nTuners\nMachinists\nDrillers\nDrivers excavators/bulldozers\nSurgeon\nTextile workers\nManufacturers\nRailroad workers\nMetallurgical blast-furnace operators\nWorkers in chemical plants etc.</string>
	<string name="_2_3_prestaviteli">Construction workers\nAssistant drillers\nTunnellers\nCotton growers\nVast majority of the earthworks\nMilkmaids\nVegetable growers\nWoodworkers, etc.</string>
	<string name="_2_5_prestaviteli">Machine operators\nHeavy planting work/harvesting period\nMiners\nReinforced concrete\nFellers\nMasons\nDiggers\nLoaders and other non-mechanized labour</string>
	<string-array name="brain_ingridients_list1">
		<item>Muesli</item>
		<item>Dried apricots</item>
		<item>Sardines</item>
		<item>Almonds</item>
	</string-array>
	<string-array name="brain_ingridients_list2">
		<item>Wild berries</item>
		<item>Melon</item>
		<item>Green pepper</item>
		<item>Broccoli</item>
	</string-array>
	<string-array name="brain_ingridients_list3">
		<item>Salad</item>
		<item>Potatoes</item>
		<item>Bananas</item>
		<item>Liver</item>
	</string-array>
	<string-array name="brain_ingridients_list4">
		<item>At least 8 glasses of water a day (non sparkling)</item>
	</string-array>
	<string-array name="fat_ingridients_list1">
		<item>Lean red meat</item>
		<item>Fish</item>
		<item>White meat</item>
		<item>Tofu</item>
	</string-array>
	<string-array name="fat_ingridients_list2">
		<item>Wild rice</item>
		<item>Apples</item>
		<item>Salad</item>
		<item>Bread with bran</item>
	</string-array>
	<string-array name="fat_ingridients_list3">
		<item>Cottage cheese or curd</item>
		<item>Yoghurt</item>
		<item>Skimmed milk</item>
		<item>Cream Cheese</item>
	</string-array>
	<string-array name="fat_ingridients_list4">
		<item>Watermelon</item>
		<item>Tomatoes</item>
		<item>Cucumbers</item>
		<item>Sweet pepper</item>
	</string-array>
	<string-array name="stress_ingridients_list1">
		<item>Spinach</item>
		<item>Avocado</item>
		<item>Potatoes</item>
		<item>Bananas</item>
	</string-array>
	<string-array name="stress_ingridients_list2">
		<item>Eggs</item>
		<item>Chickpeas</item>
		<item>Chicken</item>
		<item>Cereals</item>
	</string-array>
	<string-array name="stress_ingridients_list3">
		<item>Cabbage</item>
		<item>Grapefruit</item>
		<item>Guava</item>
		<item>Cherry</item>
	</string-array>
	<string-array name="stress_ingridients_list4">
		<item>Tofu</item>
		<item>Rye bread</item>
		<item>Pine nuts</item>
		<item>Sesame</item>
	</string-array>
	<string-array name="energy_ingridients_list1">
		<item>Rabbit</item>
		<item>Linseed oil</item>
		<item>Sunflower oil</item>
		<item>Oily fish</item>
	</string-array>
	<string-array name="energy_ingridients_list2">
		<item>Buckwheat</item>
		<item>Brown rice</item>
		<item>Beans</item>
		<item>Oatmeal</item>
	</string-array>
	<string-array name="energy_ingridients_list3">
		<item>Carrots</item>
		<item>Red pepper</item>
		<item>Arugula</item>
		<item>Mango</item>
	</string-array>
	<string-array name="energy_ingridients_list4">
		<item>Dried figs</item>
		<item>Cashew</item>
		<item>Lentils</item>
		<item>Lean red oil</item>
	</string-array>
	<string name="fat1">Protein</string>
	<string name="fat2">Fibre</string>
	<string name="fat3">Low-fat dairy products</string>
	<string name="fat4">Water saturated products</string>
	<string name="stress1">Potassium</string>
	<string name="stress2">Vitamin B</string>
	<string name="stress3">Vitamin C</string>
	<string name="stress4">Magnesium</string>
	<string name="brain1">Iron</string>
	<string name="brain2">Vitamin C</string>
	<string name="brain3">Vitamin B</string>
	<string name="brain4">Water</string>
	<string name="energy1">Unsaturated fatty acid</string>
	<string name="energy2">Food with low GI* (Glycemic index)</string>
	<string name="energy3">Beta-carotene</string>
	<string name="energy4">Iron</string>
	<string name="fat_descr1">Quickly saturates</string>
	<string name="fat_descr2">Helps you to control hunger and blood sugar level</string>
	<string name="fat_descr3">Help to cope with fatty adjournment</string>
	<string name="fat_descr4">Contains few calories</string>
	<string name="stress_descr1">Improves the functioning of the nervous and circulatory system</string>
	<string name="stress_descr2">For a healthy nervous system</string>
	<string name="stress_descr3">Enhances your immunity</string>
	<string name="stress_descr4">Mineral that you actively loose under stress</string>
	<string name="brain_descr1">Regulates blood flow to the brain</string>
	<string name="brain_descr2">Enhances your immunity</string>
	<string name="brain_descr3">For a healthy nervous system</string>
	<string name="brain_descr4">Improves brain function by 10% </string>
	<string name="energy_descr1">Energy source for every cell of your body</string>
	<string name="energy_descr2">Maintains a constant level of energy in your body</string>
	<string name="energy_descr3">Enhances your resistance to viruses</string>
	<string name="underweight_">less than 18.5\nYou may simply be underweight because your diet isn\'t providing you with enough energy (calories). This can happen for a number of reasons. Stress or other emotional problems can sometimes cause a change in eating patterns that is hard to recognise. If diet is the cause of your low weight, changing to a healthy, balanced diet can help you achieve a healthy weight. There might be an underlying medical cause for your low weight, such as an over-active thyroid. Your GP or practice nurse can give help and advice.</string>
	<string name="noraml_">18.5&#8212;24.99\nStaying at a healthy weight is one of the best things you can do for your health. It can help prevent serious health problems. Keep it up.
But weight is only one part of your health. Even if you carry some extra weight, eating healthy foods and being more active can help you feel better, have more energy, and lower your risk for disease.</string>
	<string name="overweight_">25&#8212;29.99\nOverweight refers to an individual weighing 10% or more. This light overweight could lead to some health problems, including:

    \n&#8212;Heart disease.
    \n&#8212;Stroke.
    \n&#8212;High blood pressure.
    \n&#8212;Type 2 diabetes.
    \n&#8212;Sleep apnoea.
		</string>
	<string name="obese_">30&#8212;35.99\nThe fundamental cause of obesity is an energy imbalance between calories consumed and calories expended. Globally, there has been:
    \n&#8212;An increased intake of energy-dense foods that are high in fat;
    \n&#8212;An increase in physical inactivity due to the increasingly sedentary nature of many forms of work, changing modes of transportation, and increasing urbanization.
     Overweight and obesity, as well as their related non-communicable diseases, are largely preventable. Making the healthier choice of foods and regular physical activity the easiest choice (accessible, available and affordable), and therefore preventing obesity.

At the individual level, you can:

    \n&#8212;Limit energy intake from total fats and sugars;
    \n&#8212;Increase consumption of fruit and vegetables, as well as legumes, whole grains and nuts;
    \n&#8212;Engage in regular physical activity (60 minutes a day for children and 150 minutes per week for adults).</string>
	<string name="severely_obese_">36&#8212;39.99\nSevere obesity is generally caused by consuming more calories – particularly those in fatty and sugary foods – than you burn off through physical activity. The excess energy is then stored by the body as fat.
Obesity is an increasingly common problem, because many modern lifestyles often promote eating excessive amounts of cheap, high-calorie food and spending a lot of time sitting at desks, on sofas or in cars.
There are also some underlying health conditions that can occasionally contribute to weight gain, such as an under-active thyroid gland (hypothyroidism), although conditions such as this don’t usually cause weight problems if they are effectively controlled with medication. The best way to treat obesity is to eat a healthy, reduced-calorie diet and to exercise regularly.</string>
	<string name="morbidly_obese_">more than 40\nMorbid obesity is a serious health condition that can interfere with basic physical functions such as breathing or walking. Those who are morbidly obese are at greater risk for illnesses including diabetes, high blood pressure, sleep apnoea, Gastroesophageal reflux disease (GERD), gallstones, osteoarthritis, heart disease, and cancer.
Morbid obesity is diagnosed by determining Body Mass Index (BMI). An individual is considered morbidly obese if he or she is 100 pounds over his/her ideal body weight, has a BMI of 40 or more and experiencing obesity-related health conditions, such as high blood pressure or diabetes.</string>
	<string name="male">Male</string>
	<string name="female">Female</string>
	<string name="which_describes_best_your_activity">Which of the below best describes your activity levels? (click the circle on the right)</string>
	<string name="iam_inactive">I am inactive</string>
	<string name="iam_inactive_description">I travel by car or public transport, I don\'t have an active job, I spend most of my work and leisure time sitting and I do little or no exercise.</string>
	<string name="iam_low_activity">My activity level is low</string>
	<string name="iam_low_activity_description">I occasionally travel on foot, I don\'t have an active job, I spend most of my work and leisure time sitting and do a maximum of 2.5 hours exercise a week.</string>
	<string name="iam_moderate">My activity level is moderate</string>
	<string name="iam_moderate_description">I regularly travel on foot or bike, I am active at work and home, I don\'t spend much time sitting and I do at least 2.5 hours exercise each week.</string>
	<string name="back">Back</string>
	<string name="next">Next</string>
	<string name="underweight">Underweight</string>
	<string name="normal">Normal</string>
	<string name="overweight">Overweight</string>
	<string name="obese">Obese</string>
	<string name="severely_obese">Severely Obese</string>
	<string name="morbidly_obese">Morbidly Obese</string>
	<string name="bmi">Body Mass Index (BMI)</string>
	<string name="recomended_kkal_intake_should_be">Recommended daily calorie intake should be</string>
	<string name="healthy_weight_range">Healthy weight range for this height</string>
	<string name="finish">Finish</string>
	<string name="about_bmi">About BMI</string>
	<string name="bmi_calculator">BMI (Body Mass Index) calculator</string>
	<string name="age">Age</string>
	<string name="hint_eg_24"></string>
	<string name="height_cm">Height</string>
	<string name="hint_eg_177cm">eg. 177,5cm</string>
	<string name="weight_kg">Weight</string>
	<string name="hint_eg_56kg">eg. 56kg</string>
</resources>