<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/rlSlideMe"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@drawable/round_border_gray_gradient" >
 
	<LinearLayout
		android:id="@+id/llBMIHeader"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="true"
		android:layout_alignParentRight="true"
		android:background="@drawable/background_normal"
		android:orientation="vertical"
		android:padding="7dp" >
 
		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:text="@string/bmi_calculator"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:textColor="@color/caldroid_darker_gray"
			android:textStyle="italic|bold" />
	</LinearLayout>

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_above="@+id/llCalcBmi"
		android:layout_below="@+id/llBMIHeader" >

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:orientation="vertical" >

			<RadioGroup
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_margin="10dp"
				android:background="@drawable/round_border_gray_gradient"
				android:orientation="horizontal" >

				<RadioButton
					android:id="@+id/rbMale"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:checked="true"
					android:text="@string/male"
					android:textColor="@android:color/black"
					android:textStyle="bold" />

				<RadioButton
					android:id="@+id/rbFemale"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:text="@string/female"
					android:textColor="@android:color/black"
					android:textStyle="bold" />
			</RadioGroup>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="0dp"
				android:layout_margin="10dp"
				android:layout_weight="1"
				android:orientation="vertical" >

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginBottom="10dp"
					android:background="@drawable/blue_gradient"
					android:orientation="horizontal" >

					<TextView
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:layout_gravity="left"
						android:layout_weight="1"
						android:text="@string/age"
						android:textColor="@color/caldroid_white" />

					<EditText
						android:id="@+id/etBMIAge"
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:layout_weight="1"
						android:gravity="right"
						android:hint="@string/hint_eg_24"
						android:inputType="numberDecimal"
						android:textColor="@color/caldroid_white" />
				</LinearLayout>

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="0dp"
					android:layout_marginBottom="10dp"
					android:layout_weight="1"
					android:background="@drawable/blue_gradient"
					android:orientation="horizontal" >

					<TextView
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:layout_gravity="left"
						android:layout_weight="1"
						android:text="@string/height_cm"
						android:textColor="@color/caldroid_white" />

					<EditText
						android:id="@+id/etBMIHeight"
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:layout_weight="1"
						android:gravity="right"
						android:hint="@string/hint_eg_177cm"
						android:inputType="numberDecimal"
						android:textColor="@color/caldroid_white" />
				</LinearLayout>

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:layout_marginBottom="10dp"
					android:background="@drawable/blue_gradient"
					android:orientation="horizontal" >

					<TextView
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:layout_gravity="left"
						android:layout_weight="1"
						android:text="@string/weight_kg"
						android:textColor="@color/caldroid_white" />

					<EditText
						android:id="@+id/etBMIWeight"
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:layout_weight="1"
						android:gravity="right"
						android:hint="@string/hint_eg_56kg"
						android:inputType="numberDecimal"
						android:textColor="@color/caldroid_white" />
				</LinearLayout>
			</LinearLayout>
		</LinearLayout>
	</ScrollView>

	<LinearLayout
		android:id="@+id/llCalcBmi"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:orientation="horizontal" >
 
		<Button
			android:id="@+id/btnCalculateBMI"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_margin="10dp"
			android:layout_weight="1"
			android:background="@drawable/round_border_gray_gradient"
			android:text="@string/next" />
	</LinearLayout>

</RelativeLayout>