<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/rlSlideMe"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@drawable/background_round_border" >

	<LinearLayout
		android:id="@+id/llBMIHeader"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="true"
		android:layout_alignParentRight="true"
		android:background="@drawable/background_normal"
		android:orientation="vertical"
		android:padding="7dp" >

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:text="@string/which_describes_best_your_activity"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:textColor="@color/caldroid_darker_gray"
			android:textStyle="italic|bold" />
	</LinearLayout>

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_above="@+id/llBackNext"
		android:layout_below="@+id/llBMIHeader"
		android:background="@drawable/round_border_gray_gradient" >


			<RadioGroup
				android:layout_width="match_parent"
				android:layout_height="0dp"
				android:layout_weight="1"
				android:orientation="vertical" >

				<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:background="@drawable/blue_gradient"
					android:gravity="center"
					android:text="@string/iam_inactive"
					android:textAppearance="?android:attr/textAppearanceLarge"
					android:textColor="@color/caldroid_white"
					android:textStyle="bold" />

				<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_margin="10dp"
					android:background="@drawable/blue_gradient"
					android:gravity="left"  
					android:text="@string/iam_inactive_description"
					android:textAppearance="?android:attr/textAppearanceLarge"
					android:textColor="@color/caldroid_white"
					android:textStyle="italic" />

				<RadioButton
					android:id="@+id/rbInactive"
					android:layout_width="50dp"
					android:layout_height="50dp"
					android:layout_gravity="right"
					android:layout_margin="5dp"
					android:layout_weight="1"
					android:background="@drawable/radio_selector"
					android:button="@null"
					android:checked="true"
					android:textColor="@color/caldroid_white"
					android:textStyle="bold" />

				<View
					android:layout_width="fill_parent"
					android:layout_height="3dp"
					android:background="@drawable/round_border_gray_gradient" />

				<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:background="@drawable/blue_gradient"
					android:gravity="center"
					android:text="@string/iam_low_activity"
					android:textAppearance="?android:attr/textAppearanceLarge"
					android:textColor="@color/caldroid_yellow"
					android:textStyle="bold" />

				<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_margin="10dp"
					android:background="@drawable/blue_gradient"
					android:gravity="left" 
					android:text="@string/iam_low_activity_description"
					android:textAppearance="?android:attr/textAppearanceLarge"
					android:textColor="@color/caldroid_yellow"
					android:textStyle="italic" />

				<RadioButton
					android:id="@+id/rbLow"
					android:layout_width="50dp"
					android:layout_height="50dp"
					android:layout_gravity="right"
					android:layout_margin="5dp"
					android:layout_weight="1"
					android:background="@drawable/radio_selector"
					android:button="@null"
					android:textColor="@color/caldroid_yellow"
					android:textStyle="bold" />

				<View
					android:layout_width="fill_parent"
					android:layout_height="3dp"
					android:background="@drawable/round_border_gray_gradient" />

				<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:background="@drawable/blue_gradient"
					android:gravity="center"
					android:text="@string/iam_moderate"
					android:textColor="@color/caldroid_black"
					android:textAppearance="?android:attr/textAppearanceLarge"
					android:textStyle="bold" />

				<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_margin="10dp"
					android:background="@drawable/blue_gradient"
					android:gravity="left"  
					android:text="@string/iam_moderate_description"
					android:textAppearance="?android:attr/textAppearanceLarge"
					android:textColor="@color/caldroid_black"
					android:textStyle="italic" />

				<RadioButton
					android:id="@+id/rbModerate"
					android:layout_width="50dp"
					android:layout_height="50dp"
					android:layout_gravity="right"
					android:layout_margin="5dp"
					android:layout_weight="1"
					android:background="@drawable/radio_selector"
					android:button="@null"
					android:textColor="@color/caldroid_black"
					android:textStyle="bold" />

				<View
					android:layout_width="fill_parent"
					android:layout_height="3dp"
					android:background="@drawable/round_border_gray_gradient" />
			</RadioGroup>
	</ScrollView>

	<LinearLayout
		android:id="@+id/llBackNext"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:orientation="horizontal" >

		<Button
			android:id="@+id/btnBack"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="10dp"
			android:layout_weight="1"
			style="?android:attr/buttonBarButtonStyle"
			android:background="@drawable/round_border_gray_gradient"
			android:text="@string/back" />

		<Button
			android:id="@+id/btnNext"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="10dp"
			android:layout_weight="1"
			style="?android:attr/buttonBarButtonStyle"
			android:background="@drawable/round_border_gray_gradient"
			android:text="@string/next" />
	</LinearLayout>

</RelativeLayout>