<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/scrollView1"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@drawable/round_border_gray_gradient" >

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical" >

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_margin="10dp"
			android:layout_weight="1"
			android:background="@drawable/background_obese"
			android:orientation="vertical"
			android:padding="5dp" >

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:text="@string/bmi"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:textStyle="italic"
				android:typeface="serif" />

			<TextView
				android:id="@+id/twBmiValue"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:textAppearance="?android:attr/textAppearanceLarge"
				android:textStyle="bold|italic"
				android:typeface="serif" />

			<TextView
				android:id="@+id/twBmiResultName"
				android:layout_width="match_parent"
				android:layout_height="0dp"
				android:layout_weight="1"
				android:gravity="center"
				android:textAppearance="?android:attr/textAppearanceLarge"
				android:textColor="@color/green"
				android:typeface="serif" />
		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_margin="10dp"
			android:layout_weight="1"
			android:background="@drawable/background_obese"
			android:orientation="vertical"
			android:padding="5dp" >

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:text="@string/recomended_kkal_intake_should_be"
				android:textAppearance="?android:attr/textAppearanceLarge"
				android:textStyle="italic|bold"
				android:typeface="serif" />

			<TextView
				android:id="@+id/twHealthyCaloriesRange"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:textAppearance="?android:attr/textAppearanceLarge"
				android:textStyle="bold|italic"
				android:typeface="serif" />
		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_margin="10dp"
			android:layout_weight="1"
			android:background="@drawable/background_obese"
			android:orientation="vertical"
			android:padding="5dp" >

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:text="@string/healthy_weight_range"
				android:textAppearance="?android:attr/textAppearanceLarge"
				android:textColor="@color/caldroid_black"
				android:textStyle="italic|bold"
				android:typeface="serif" />

			<TextView
				android:id="@+id/twHealthyWeightRange"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:textAppearance="?android:attr/textAppearanceLarge"
				android:textStyle="bold|italic"
				android:typeface="serif" />
		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_margin="5dp"
			android:layout_weight="1"
			android:orientation="horizontal" >
 
			<Button
				android:id="@+id/btnFinish"
				style="?android:attr/buttonBarButtonStyle"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_margin="10dp" 
				android:layout_weight="1"
				android:background="@drawable/round_border_gray_gradient"
				android:text="@string/finish" />
 
			<Button
				android:id="@+id/btnAboutBmiIndex"
				style="?android:attr/buttonBarButtonStyle"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_margin="10dp"
				android:layout_weight="1"
				android:background="@drawable/round_border_gray_gradient"
				android:text="@string/about_bmi" />
		</LinearLayout>
	</LinearLayout>

</ScrollView>